--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ a{
 .main h1 span{
     color: brown;
 }
-.main p{
-    font-size: 2rem;
-
+p{
+    font-size: 1rem;
+    margin-bottom: 1rem;
 }
 img{
     width: 100%;;
@@ -48,9 +48,10 @@ img{
     grid-gap: 2rem;
     background: #f1f1f1;
     margin-bottom: 2rem;
+    align-items: center;
 }
 .card h3{
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .card img{
     height:100%;
@@ -65,17 +66,33 @@ img{
 }
 .btn{
     display: inline-block;
-    background: black;
+    background:#191919;
     color: #fff;
     padding: 0.8rem 1.8rem;
     margin-top: 0.8;
     cursor: pointer;
 }
+.card_img{
+    max-width: 500px;
+    max-height: 380px;
+}
 .btn:hover{
-    opacity: 0.8;
+    /* rotate: 90deg; */
+    /* transform: rotateX(10deg); */
+    transform: rotateY(20deg);
+    transition: all 0.3s;
+    background: #f9f9f9;
+    box-shadow: 2px 3px 2px #000;
+    color:#191919;
 }
 @media (max-width:600px){
     .card{
         display: block;
+    }
+    .main h1 {
+        font-size: 2rem;
+    }
+    .main{
+        height: unset;
     }
 }
